side spacing, fixes msg box padding as well, not really fix, should be removing the width instead

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,6 +1,7 @@
 body {
   /* body20 */
   font-size: 15px;
+  padding: 0 8px;
 }
 
 /* on (small) mobile displays */
